# web_scraping

./: README.md
product_scraper/: Cargo.toml  readme.md
product_scraper/src/: client.rs  error.rs  lib.rs  main.rs
product_scraper/src/scrapers/: ebay.rs  mod.rs  stockx.rs
