[package]
name = "product_scraper"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.88"
derive_more = { version = "2.0.1", features = ["from"] }
fantoccini = "0.21.5"
features = "0.10.0"
futures = "0.3.31"
join = "0.3.1"
reqwest = "0.12.15"
scraper = "0.23.1"
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["full"] }
